--- a/doc/localisation_example/equations.tex
+++ b/doc/localisation_example/equations.tex
@@ -1,1 +1,5 @@
+//Static localisation
+p({ v })\quad \sim \quad N(\mu ,{ \sigma  }^{ 2 })\\ p(z|{ v })\quad \sim \quad N(ax+{ b },{ \sigma  }^{ 2 })\\ \\ p({ v }|z)\quad \sim \quad N(\mu ,{ \sigma  }^{ 2 })\\ p({ v }|z)\quad =\quad p({ v })p(z|{ v })
+
+//Dynamic localisation
 p({ v }_{ 0 })\quad \sim \quad N(\mu ,{ \sigma  }^{ 2 })\\ p({ v }_{ 1 }|{ v }_{ 0 })\quad \sim \quad N(ax+{ b },{ \sigma  }^{ 2 })\\ p(z|{ v }_{ 1 })\quad \sim \quad N(ax+{ b },{ \sigma  }^{ 2 })\\ \\ p({ v }_{ 1 }|z)\quad \sim \quad N(\mu ,{ \sigma  }^{ 2 })\\ p({ v }_{ 1 }|z)\quad =\quad \int { p({ v }_{ 0 })p({ v }_{ 1 }|{ v }_{ 0 })p(z|{ v }_{ 1 })d{ v }_{ 0 } } 
