Writing doc for a TrueSkill in Tennis

--- a/doc/trueskill_in_tennis/latex/trueskill_in_tennis.lyx
+++ b/doc/trueskill_in_tennis/latex/trueskill_in_tennis.lyx
@@ -133,7 +133,7 @@ Let's define a tennis player
 \end_layout
 
 \begin_layout Section*
-Trueskill rating model
+TrueSkill rating model
 \end_layout
 
 \begin_layout Standard
